--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,16 +2,8 @@ spring:
   application:
     name: tms-service
   cloud:
-    config:
-      discovery:
-        enabled: false
-        service-id: openwms-config
-      enabled: false
-      fail-fast: true # true means retry
-      retry:
-        max-attempts: 120
     discovery:
-      enabled: false
+      enabled: true
   security:
     user:
       password: sa
@@ -38,25 +30,9 @@ spring:
     date-format: yyyy-MM-dd'T'HH:mm:ss.SSSZ
   main:
     allow-bean-definition-overriding: true
-  rabbitmq:
-    listener:
-      simple:
-        retry:
-          max-attempts: 3
-          enabled: true
-          initial-interval: 1s
-          max-interval: 1s
   zipkin:
     sender:
       type: web
-
-feign:
-  httpclient:
-    connection-timeout: 30000
-    connection-timer-repeat: 30000
-ribbon:
-  connectTimeout: 30000
-  ReadTimeout: 30000
 
 owms:
   eureka:
@@ -72,23 +48,6 @@ owms:
 
 server:
   port: ${PORT:8131}
-
-eureka:
-  client:
-    healthcheck:
-      enabled: true
-    instance-info-replication-interval-seconds: 10 # default is 30
-    service-url:
-      defaultZone: ${owms.eureka.zone}  # Must be camelCase
-  instance:
-    hostname: ${owms.srv.hostname}
-    secure-port-enabled: false
-    non-secure-port-enabled: true
-    metadata-map:
-      username: ${spring.security.user.name}
-      password: ${spring.security.user.password}
-      protocol: ${owms.srv.protocol}
-      zone: ${owms.eureka.zone}
 
 management:
   endpoints:
@@ -121,14 +80,14 @@ spring:
   config:
     activate:
       on-profile: ASYNCHRONOUS
-  cloud:
-    config:
-      discovery:
-        enabled: true
-      enabled: true
-      fail-fast: true # true means retry
-    discovery:
-      enabled: true
+  rabbitmq:
+    listener:
+      simple:
+        retry:
+          max-attempts: 3
+          enabled: true
+          initial-interval: 1s
+          max-interval: 1s
 
 management:
   health:
@@ -167,14 +126,49 @@ owms:
 spring:
   config:
     activate:
+      on-profile: DISTRIBUTED
+    import: configserver:http://localhost:8099
+  cloud:
+#    config:
+#      discovery:
+#        enabled: true
+#      enabled: true
+#      fail-fast: true # true means retry
+    discovery:
+      enabled: true
+
+eureka:
+  client:
+    healthcheck:
+      enabled: true
+    instance-info-replication-interval-seconds: 10 # default is 30
+    service-url:
+      defaultZone: ${owms.eureka.zone}  # Must be camelCase
+  instance:
+    hostname: ${owms.srv.hostname}
+    secure-port-enabled: false
+    non-secure-port-enabled: true
+    metadata-map:
+      username: ${spring.security.user.name}
+      password: ${spring.security.user.password}
+      protocol: ${owms.srv.protocol}
+      zone: ${owms.eureka.zone}
+
+feign:
+  httpclient:
+    connection-timeout: 30000
+    connection-timer-repeat: 30000
+ribbon:
+  connectTimeout: 30000
+  ReadTimeout: 30000
+
+---
+spring:
+  config:
+    activate:
       on-profile: HEROKU
   main:
     banner-mode: "OFF"
-  cloud:
-    config:
-      discovery:
-        enabled: true
-      enabled: true
 
 owms:
   srv:
@@ -183,6 +177,7 @@ owms:
 
 eureka:
   instance:
+    hostname: ${owms.srv.hostname}
     secure-port-enabled: true
     non-secure-port-enabled: false
     statusPageUrl: ${owms.srv.protocol}://${owms.srv.hostname}:${server.port}/actuator/info
