--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,6 @@
 spring:
   application:
     name: tms-service
-  cloud:
-    discovery:
-      enabled: true
-  security:
-    user:
-      password: sa
-      name: user
   jpa:
     show-sql: false
     open-in-view: false
@@ -30,6 +23,10 @@ spring:
     date-format: yyyy-MM-dd'T'HH:mm:ss.SSSZ
   main:
     allow-bean-definition-overriding: true
+  security:
+    user:
+      name: user
+      password: sa
   zipkin:
     sender:
       type: web
@@ -129,11 +126,11 @@ spring:
       on-profile: DISTRIBUTED
     import: configserver:http://localhost:8099
   cloud:
-#    config:
+    config:
 #      discovery:
 #        enabled: true
-#      enabled: true
-#      fail-fast: true # true means retry
+      enabled: true
+      fail-fast: true # true means retry
     discovery:
       enabled: true
 
@@ -149,6 +146,7 @@ eureka:
     secure-port-enabled: false
     non-secure-port-enabled: true
     metadata-map:
+      config-protocol: http # The protocol used to access the config server
       username: ${spring.security.user.name}
       password: ${spring.security.user.password}
       protocol: ${owms.srv.protocol}
@@ -189,9 +187,6 @@ spring:
   config:
     activate:
       on-profile: TEST
-  cloud:
-    config:
-      fail-fast: false
   main:
     banner-mode: "off"
   zipkin:
