#11 Fixed dependency clash

--- a/pom.xml
+++ b/pom.xml
@@ -356,6 +356,12 @@
             <groupId>com.github.dozermapper</groupId>
             <artifactId>dozer-core</artifactId>
             <optional>true</optional>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.objenesis</groupId>
+                    <artifactId>objenesis</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <!-- Need to upgrade Guava from version 11 because of CVE -->
