--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
         <jersey.version>1.19.4</jersey.version>
         <joda-time.version>2.10.8</joda-time.version>
         <jsr305.version>3.0.2</jsr305.version>
+        <objenesis.version>2.6</objenesis.version>
         <servo-core.version>0.12.21</servo-core.version>
         <skipTests>false</skipTests>
         <spring-cloud-dependencies.version>2021.0.0</spring-cloud-dependencies.version>
@@ -216,7 +217,7 @@
             <dependency>
                 <groupId>org.objenesis</groupId>
                 <artifactId>objenesis</artifactId>
-                <version>2.6</version>
+                <version>${objenesis.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
