--- a/.github/workflows/master-docs.yml
+++ b/.github/workflows/master-docs.yml
@@ -1,4 +1,4 @@
-name: 'master_docs'
+name: 'Build Documentation & QA'
 on:
   workflow_run:
     workflows: ["master_build"]
@@ -10,7 +10,7 @@ env:
   MAVEN_OPTS: -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 
 jobs:
-  site_job:
+  build_site:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     name: Build Microservice Docs
@@ -38,11 +38,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
           java-version: 17
+      - name: Cache SonarQube packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
@@ -51,15 +57,16 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Install tools
         run: |
-          sudo apt-get install graphviz
+          sudo apt-get update
+          sudo apt-get install graphviz gsfonts graphviz-doc
           git config --global user.email "ci@example.com"
           git config --global user.name "CI Server"
       - name: Site
         run: >
           ./mvnw post-integration-test site scm-publish:publish-scm
           -DM2_REPO_DIR=/home/runner/.m2/repository
-          -DsurefireArgs=-Dspring.profiles.active=TEST,TESTPG
-          -Dargs=-Dspring.profiles.active=TEST,TESTPG
+          -DsurefireArgs=-Dspring.profiles.active=ASYNCHRONOUS,TEST,TESTPG
+          -Dargs=-Dspring.profiles.active=ASYNCHRONOUS,TEST,TESTPG
           -Dspring.datasource.url=jdbc:postgresql://localhost:5432/testdb
           -Dspring.rabbitmq.host=localhost
           -DDB_HOST=localhost
@@ -69,17 +76,17 @@ jobs:
           -Dscmpublish.pubScmUrl=scm:git:https://openwms:$PUSHKEY@github.com/openwms/org.openwms.tms.transportation.git
           -DdeveloperConnectionUrl=scm:git:https://openwms:$PUSHKEY@github.com/openwms/org.openwms.tms.transportation.git
           -Dci.buildNumber=$GITHUB_RUN_NUMBER
-          -Pschemagen -B $MAVEN_OPTS
+          -Pschemagen,release -B $MAVEN_OPTS
         env:
           PUSHKEY: ${{ secrets.PUSHKEY }}
       - name: Sonar
         run: >
           ./mvnw clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.7.0.1746:sonar
-          -Dsonar.login=$SONAR_TOKEN
+          -DsurefireArgs="-Dspring.profiles.active=ASYNCHRONOUS,TEST"
           -Dspring.rabbitmq.host=localhost
-          -DsurefireArgs=-Dspring.profiles.active=TEST
-          -Dci.buildNumber=$GITHUB_RUN_NUMBER
+          -Dsonar.login=$SONAR_TOKEN
           -DSONAR_TOKEN=$SONAR_TOKEN
+          -Dci.buildNumber=$GITHUB_RUN_NUMBER
           -Pcoverage -B $MAVEN_OPTS
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
