--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -1,8 +1,7 @@
-name: 'branch_build'
+name: 'release_build'
 on:
   push:
-    branches-ignore:
-      - master
+    branches:
       - 'release/**'
 
 env:
@@ -11,7 +10,7 @@ env:
 jobs:
   build_job:
     runs-on: ubuntu-latest
-    name: Build & Test Microservice
+    name: Build & Test Microservice on Release branches
     services:
       rabbitmq:
         image: rabbitmq:3.8
@@ -27,12 +26,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 17
-      - name: Cache Maven packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+      - name: Set Release version env variable
+        run: |
+          echo "RELEASE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
       - name: Build
         run: >
           ./mvnw clean verify
@@ -40,3 +36,15 @@ jobs:
           -Dspring.rabbitmq.host=localhost
           -Dci.buildNumber=$GITHUB_RUN_NUMBER
           -U -B $MAVEN_OPTS
+      - name: Build Image
+        run: ./scripts/docker_build_release
+        env:
+          BUILD_NUMBER: ${{ env.GITHUB_RUN_NUMBER }}
+          VERSION: ${{ env.RELEASE_VERSION }}
+      - name: Upload Image
+        run: ./scripts/docker_push_release
+        env:
+          BUILD_NUMBER: ${{ env.GITHUB_RUN_NUMBER }}
+          VERSION: ${{ env.RELEASE_VERSION }}
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
